--- a/lucky-number/src/pages/Layout.css
+++ b/lucky-number/src/pages/Layout.css
@@ -8,8 +8,8 @@ ul {
  li {
     padding: 0 20px;
     display: inline-block;
-    font-size: xx-large;
-  
+    font-size: 30px;
+  font-weight: bold;
   }
 
   .text-warning {
